new local commands to manage hosts,groups
